<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="3dp"
    android:clickable="true"
    android:focusable="true"
    app:cardElevation="3dp"
    app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
    app:cardCornerRadius="12dp"
    app:contentPadding="16dp"
    app:strokeWidth="2dp"
    app:strokeColor="@color/grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:animateLayoutChanges="true">
        <TextView
            android:textAlignment="center"
            android:fontFamily="@font/heebo_extra_light"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seg_label"
            android:scaleType="centerCrop"
            />
        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/segmentation"
            android:scaleType="centerCrop"
            android:layout_margin="8dp"
            />
        <RadioGroup
            android:checkedButton="@+id/thresholdingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/thresholdingButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/thresholding" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/edge_detection"/>
        </RadioGroup>
    </LinearLayout>



</com.google.android.material.card.MaterialCardView>