<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:textAlignment="center"
        android:fontFamily="@font/heebo_extra_light"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configuration_details"
        android:scaleType="centerCrop"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_space"
            android:textStyle="bold"
            android:scaleType="centerCrop"
            android:layout_margin="8dp"
            />
        <TextView
            android:id="@+id/colorSpaceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_space"
            android:scaleType="centerCrop"
            android:layout_margin="8dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filtering_method"
            android:textStyle="bold"
            android:scaleType="centerCrop"
            android:layout_margin="8dp"
            />
        <TextView
            android:id="@+id/filteringMethodValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filtering_method"
            android:scaleType="centerCrop"
            android:layout_margin="8dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/segmentation_method"
            android:textStyle="bold"
            android:scaleType="centerCrop"
            android:layout_margin="8dp"
            />
        <TextView
            android:id="@+id/segmentationMethodValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/segmentation_method"
            android:scaleType="centerCrop"
            android:layout_margin="8dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/extraction_method"
            android:scaleType="centerCrop"
            android:layout_margin="8dp"
            />
        <TextView
            android:id="@+id/extractionMethodValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extraction_method"
            android:scaleType="centerCrop"
            android:layout_margin="8dp"
            />
    </LinearLayout>


</LinearLayout>