<LinearLayout
    android:id="@+id/substitute_color_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/color_preview"
        android:textAlignment="center"
        android:scaleType="centerCrop"
        android:layout_marginTop="8dp"
        />
    <View
        android:id="@+id/backgroundColorView"
        android:layout_margin="15dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/color_preview_circle"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hue"
        android:textAlignment="center"
        android:scaleType="centerCrop"
        android:layout_marginTop="8dp"
        />
    <com.google.android.material.slider.Slider
        android:id="@+id/backgroudHueSlider"
        app:tickVisible="false"
        android:stepSize="1"
        android:valueFrom="0.0"
        android:valueTo="180"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saturation"
        android:textAlignment="center"
        android:scaleType="centerCrop"
        android:layout_marginTop="8dp"
        />
    <com.google.android.material.slider.Slider
        android:id="@+id/backgroundSaturationSlider"
        app:tickVisible="false"
        android:stepSize="0.01"
        android:valueFrom="0.0"
        android:valueTo="1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hsvValue"
        android:textAlignment="center"
        android:scaleType="centerCrop"
        android:layout_marginTop="8dp"
        />
    <com.google.android.material.slider.Slider
        android:id="@+id/backgroundValueSlider"
        app:tickVisible="false"
        android:stepSize="0.01"
        android:valueFrom="0.0"
        android:valueTo="1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
</LinearLayout>
</LinearLayout>