<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edge_dir_hint"
        android:textAlignment="center"
        android:scaleType="centerCrop"
        android:layout_marginVertical="15dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/horizontal_edge_dir"
                android:textAlignment="center"
                android:scaleType="centerCrop"
                android:layout_marginTop="8dp"
                />
            <RadioButton
                android:id="@+id/horizontalEdgeDirButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:checked="true"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vertical_edge_dir"
                android:textAlignment="center"
                android:scaleType="centerCrop"
                android:layout_marginTop="8dp"
                />
            <RadioButton
                android:id="@+id/verticalEdgeDirButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/both_edge_dir"
                android:textAlignment="center"
                android:scaleType="centerCrop"
                android:layout_marginTop="8dp"
                />
            <RadioButton
                android:id="@+id/bothEdgeDirButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
