<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/thresholding_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="3dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:clickable="true"
    android:focusable="true"
    app:cardElevation="1dp"
    app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
    app:cardCornerRadius="12dp"
    app:contentPadding="16dp"
    app:strokeWidth="2dp"
    app:strokeColor="@color/grey"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:animateLayoutChanges="true">
        <TextView
            android:textAlignment="center"
            android:fontFamily="@font/heebo_extra_light"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marking_label"
            android:scaleType="centerCrop"
            />
        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marking"
            android:scaleType="centerCrop"
            android:layout_margin="8dp"
            />
        <RadioGroup
            android:checkedButton="@+id/drawContoursButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/drawContoursButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/background_change" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/draw_contours"/>
        </RadioGroup>
        <LinearLayout
            android:id="@+id/backgroundChangeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <View
                    android:id="@+id/backgroundColorView"
                    android:layout_width="150dp"
                    android:layout_height="150dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hue"
                    android:textAlignment="center"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="8dp"
                    />
                <com.google.android.material.slider.Slider
                    android:id="@+id/backgroudHueSlider"
                    app:tickVisible="false"
                    android:stepSize="1"
                    android:valueFrom="0.0"
                    android:valueTo="180"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saturation"
                    android:textAlignment="center"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="8dp"
                    />
                <com.google.android.material.slider.Slider
                    android:id="@+id/backgroundSaturationSlider"
                    app:tickVisible="false"
                    android:stepSize="0.01"
                    android:valueFrom="0.0"
                    android:valueTo="1"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hsvValue"
                    android:textAlignment="center"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="8dp"
                    />
                <com.google.android.material.slider.Slider
                    android:id="@+id/backgroundValueSlider"
                    app:tickVisible="false"
                    android:stepSize="0.01"
                    android:valueFrom="0.0"
                    android:valueTo="1"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/draw_contours_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true"
            android:visibility="gone">
        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>