<LinearLayout android:id="@+id/draw_contours_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contour_line_preview"
                android:textAlignment="center"
                android:scaleType="centerCrop"
                android:layout_marginTop="8dp"
                />
            <View
                android:id="@+id/contourPreview"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="70dp"
                android:layout_marginVertical="20dp"
                android:layout_gravity="center"
                android:layout_height="10px"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hue"
                    android:textAlignment="center"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="8dp"
                    />
                <com.google.android.material.slider.Slider
                    android:id="@+id/contourHueSlider"
                    app:tickVisible="false"
                    android:stepSize="1"
                    android:valueFrom="0.0"
                    android:valueTo="180"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saturation"
                    android:textAlignment="center"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="8dp"
                    />
                <com.google.android.material.slider.Slider
                    android:id="@+id/contourSaturationSlider"
                    app:tickVisible="false"
                    android:stepSize="0.01"
                    android:valueFrom="0.0"
                    android:valueTo="1"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hsvValue"
                    android:textAlignment="center"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="8dp"
                    />
                <com.google.android.material.slider.Slider
                    android:id="@+id/contourValueSlider"
                    app:tickVisible="false"
                    android:stepSize="0.01"
                    android:valueFrom="0.0"
                    android:valueTo="1"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contour_thickness"
                    android:textAlignment="center"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="8dp"
                    />
                <com.google.android.material.slider.Slider
                    android:id="@+id/contourThicknessSlider"
                    app:tickVisible="false"
                    android:stepSize="1"
                    android:valueFrom="1"
                    android:valueTo="30"
                    android:value="10"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/minimal_contour_area"
                    android:textAlignment="center"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="8dp"
                    />
                <com.google.android.material.slider.Slider
                    android:id="@+id/contourAreaSlider"
                    app:tickVisible="false"
                    android:stepSize="0.01"
                    android:valueFrom="0.0"
                    android:valueTo="0.5"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>

